--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,12 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f2f2f2;
+  background-color: rgb(216, 164, 247);
   padding: 40px;
   text-align: center;
 }
 
 .App {
-  background: white;
+  background: rgb(232, 193, 255);
   padding: 20px;
   border-radius: 12px;
   max-width: 500px;
@@ -19,16 +19,29 @@ input[type="text"] {
   font-size: 16px;
   width: 60%;
   margin-right: 8px;
+  border-radius: 10px;
+  border-width: 1px;
+  border-collapse: collapse;
 }
 
-button {
+#addButton {
   padding: 8px 12px;
   font-size: 16px;
   cursor: pointer;
+  border-radius: 10px;
+  border-width: 1px;
+}
+
+#addButton:hover{
+  transition:all;
+  transition-duration: 0.2s;
+  background-color: rgb(249, 224, 255);
 }
 
 ul {
   list-style: none;
   padding: 0;
   margin-top: 20px;
+  justify-items: left;
+  margin-left: 190px;
 }
